some significant bugs have been squished, undo and redo are sending new state info, save and load process data correctly, updating project details from settings writes properly

--- a/src/ui/styles/SettingsForm.module.css
+++ b/src/ui/styles/SettingsForm.module.css
@@ -15,6 +15,11 @@
 	border-radius: 1em;
 }
 
+.inputMult {
+	display: inline !important;
+	width: 30% !important;
+}
+
 .parentContainer {
 	top: 5%;
 
